--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
 }
 .graph {
   background: #fff;
-  max-width: 609px;
+  max-width: 100%;
   height: 350px;
   height: 274px;
   border-radius: 8px;
@@ -124,7 +124,7 @@ body {
   line-height: 28px;
 }
 #myChart {
-  max-width: 605.302px !important;
+  width: 101.5% !important;
   height: 150px !important;
   font-size: 20px !important;
   margin-right: 22.4px;
@@ -151,7 +151,7 @@ body {
 }
 .card {
   background: url('./assets/card.png');
-  max-width: 408px;
+  max-width: 450px;
   height: 290px;
   border-radius: 12px;
   position: relative;
@@ -791,12 +791,12 @@ tbody th {
     flex: 1;
   }
 }
-@media (max-width: 1500px) {
+@media (max-width: 1700px) {
   .grid {
     display: grid;
-    max-width: 1259px;
+    max-width: 100%;
     grid-template-columns: 2fr 1fr;
-    gap: 24px;
+    justify-content: space-between;
   }
 }
 @media (max-width: 1200px) {
